testdata/repos/standalone/SourcingCheck/InvalidSlot/InvalidSlot-5.ebuild
EAPI=7
DESCRIPTION="Ebuild with missing SLOT"
HOMEPAGE="https://github.com/pkgcore/pkgcheck"
LICENSE="BSD"
